# vincis-math-lib

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.bat  docu.sh  xcode.sh
debug/: CMakeLists.txt  main.cpp
docu/: header.html
vml/: Arc.h  ArcShape.h  Base.h  Basics.h  CMakeLists.txt  Cashew.h  Complex.h  Graph.h  Interval.h  Mat4.h  Polynomial.h  Vec2.h  Vec3.h  Vec4.h  arcshape.h  base.h  basics.h  cardgame.h  cashew.h  complex.h  fft.h  graph.h  interval.h  mat4.h  parse.h  polynomial.h  vec2.h  vec4.h
vml/src/: Arc.cpp  ArcShape.cpp  Base.cpp  Cashew.cpp  Complex.cpp  Interval.cpp  Mat4.cpp  Polynomial.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp  arc.cpp  arcshape.cpp  base.cpp  cardgame.cpp  cashew.cpp  complex.cpp  fft.cpp  interval.cpp  mat4.cpp  parse.cpp  polynomial.cpp  vec2.cpp  vec4.cpp
